This file is used to record changes made to the CVS database. Please add 
yourself to the top of this file before committing any changes. Please use 
the header format provided for each entry, noting that the text on each line 
should not be longer than the lines of dashes.

Miguel Bolanos.

Contributor			Email
-----------------------------------------------------------------

Claudio Matsuoka		claudio@conectiva.com
Miguel Bolanos			mike@linuxlabs.com
Tommy McCabe			rocketjet314@yahoo.com

-----------------------------------------------------------------

Web Jun 02 21:20:47 CST 2004	Miguel Bolanos <mike@linuxlabs.com>

	* Added lib/ directory to rootfs_template
	* Removed rootfs_template.tar.
	* Removed "mkdir" commands from sys_utils/Makefile

Web Jun 02 21:05:56 CST 2004	Tommy McCabe <rocketjet314@yahoo.com>

	* Improvements to MAKEDEV.. patch adapted by Eduardo Habkost

Web Jun 02 21:01:34 CST 2004    Claudio Matsuoka <claudio@conectiva.com>

	* fixed BSS problem

Web Jun 02 14:16:57 CST 2004	Claudio Matsuoka <claudio@conectiva.com>
	
	* Added more minix utilities (cal diff file find head sort tail tee)
	* Removed warning comment from ash/expand.c as bcc compiles the code.

Tue Jun 01 20:46:36 CST 2004	Claudio Matsuoka <claudio@conectiva.com>

	* Ported ncompress, 12 bit compress atm.

Tue Jun 01 09:23:15 CST	2004	Miguel Bolanos <mike@linuxlabs.com>

	* Applied and Fixed some patches for bc and sys_utils.
	* Created CHANGELOG file.
